--- a/docker-compose.yml.example
+++ b/docker-compose.yml.example
@@ -2,7 +2,7 @@ version: '3.4'
 
 services:
   muse:
-    image: ghcr.io/museofficial/muse:latest
+    image: ghcr.io/lyahn/freshjeff:latest
     restart: always
     volumes:
       - ./muse:/data
